--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <a href="./index.html">WebStudio</a>
         <address>                      
             <ul>
-                <li><a href="">г. Киев, пр-т Леси Украинки, 26</a></li>
+                <li><a href="https://goo.gl/maps/piqngm7oDQpEDh6u6" target="_blank" rel="noopener nofollow noreferrer">г. Киев, пр-т Леси Украинки, 26</a></li>
                 <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                 <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
             </ul>
