--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Эффективные решения для вашего бизнеса">
     <title>WebStudio</title>
+    <link rel="stylesheet" href="./scc/styles.scc">
 </head>
 <body>
     <!--header-->
@@ -14,7 +15,7 @@
             <a href="./index.html">WebStudio</a>
             <ul>
                 <li><a href="">Студия</a></li>
-                <li><a href="">Портфолио</a></li>
+                <li><a href="./portfolio.html">Портфолио</a></li>
                 <li><a href="">Контакты</a></li>
             </ul>
         </nav>
