--- a/index.html
+++ b/index.html
@@ -6,55 +6,58 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Эффективные решения для вашего бизнеса">
     <title>WebStudio</title>
-    <link rel="stylesheet" href="./scc/styles.scc">
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-    <!--header-->
+    <!--Header-->
     <header>
+        <!-- Nav -->
         <nav>
-            <a href="./index.html">WebStudio</a>
-            <ul>
-                <li><a href="">Студия</a></li>
-                <li><a href="./portfolio.html">Портфолио</a></li>
-                <li><a href="">Контакты</a></li>
+            <a href="./index.html" class="logo">WebStudio</a>
+            <ul class="site-nav list">
+                <li><a href="" class="link current">Студия</a></li>
+                <li><a href="./portfolio.html" class="link">Портфолио</a></li>
+                <li><a href="" class="link">Контакты</a></li>
             </ul>
         </nav>
-        <ul>
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <ul class="site-nav list">
+            <li><a href="mailto:info@devstudio.com" class="link current">info@devstudio.com</a></li>
+            <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
         </ul>
     </header>
     <!--main-->
     <main>
-        <!--шапка-->
-        <section>
-            <h1>Эффективные решения для вашего бизнеса</h1>
-            <button type="button">Заказать услугу</button>
+        <!--Hero-->
+        <section class="hero">
+            <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+            <button class="button primary" type="button">Заказать услугу</button>
         </section>
-        <section>
-            <h2>Особенности нашей работы</h2>
-            <ul>
-                <li>
-                    <h3>Внимание к деталям</h3>
+        <!-- Features -->
+        <section class="section">
+            <h2 class="section-title">Особенности нашей работы</h2>
+            <ul class="list">
+                <li class="feature-list">
+                    <h3 class="title">Внимание к деталям</h3>
                     <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                 </li>
-                <li>
-                    <h3>Пунктуальность</h3>
+                <li class="feature-list">
+                    <h3 class="title">Пунктуальность</h3>
                     <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                 </li>
-                <li>
-                    <h3>Планирование</h3>
+                <li class="feature-list">
+                    <h3 class="title">Планирование</h3>
                     <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                 </li>
-                <li>
-                    <h3>Современные технологии</h3>
+                <li class="feature-list">
+                    <h3 class="title">Современные технологии</h3>
                     <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                 </li>
             </ul>
         </section>
-        <section>
-            <h2>Чем мы занимаемся</h2>
-            <ul>
+        <!-- Our work -->
+        <section class="section">
+            <h2 class="section-title">Чем мы занимаемся</h2>
+            <ul class="list">
                 <li>
                     <img src="./image/box1.jpg" alt="box1" width="370" height="294"/>
                 </li>
@@ -66,27 +69,28 @@
                 </li>
             </ul>
         </section>
-        <section>
-            <h2>Наша команда</h2>
-            <ul>
-                <li>
+        <!-- Our team -->
+        <section class="section">
+            <h2 class="section-title">Наша команда</h2>
+            <ul class="list">
+                <li class="team-list">
                     <img src="./image/team_card1.jpg" alt="team-card1" width="270" height="260">
-                    <h3>Игорь Демьяненко</h3>
+                    <h3 class="title">Игорь Демьяненко</h3>
                     <p>Product Designer</p>                    
                 </li>
-                <li>
+                <li class="team-list">
                     <img src="./image/team_card2.jpg" alt="team-card2" width="270" height="260">
-                    <h3>Ольга Репина</h3>
+                    <h3 class="title">Ольга Репина</h3>
                     <p>Frontend Developer</p>
                 </li>
-                <li>
+                <li class="team-list">
                     <img src="./image/team_card3.jpg" alt="team-card3" width="270" height="260">
-                    <h3>Николай Тарасов</h3>
+                    <h3 class="title">Николай Тарасов</h3>
                     <p>Marketing</p>
                 </li>
-                <li>
+                <li class="team-list">
                     <img src="./image/team_card4.jpg" alt="team-card4" width="270" height="260">
-                    <h3>Михаил Ермаков</h3>
+                    <h3 class="title">Михаил Ермаков</h3>
                     <p>UI Designer</p>
                 </li>
             </ul>
@@ -94,12 +98,12 @@
     </main>
     <!--footer-->
     <footer>
-        <a href="./index.html">WebStudio</a>
+        <a href="./index.html" class="logo">WebStudio</a>
         <address>                      
-            <ul>
-                <li><a href="https://goo.gl/maps/piqngm7oDQpEDh6u6" target="_blank" rel="noopener nofollow noreferrer">г. Киев, пр-т Леси Украинки, 26</a></li>
-                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+            <ul class="auth-nav list">
+                <li><a href="https://goo.gl/maps/piqngm7oDQpEDh6u6" target="_blank" rel="noopener nofollow noreferrer" class="link">г. Киев, пр-т Леси Украинки, 26</a></li>
+                <li><a href="mailto:info@devstudio.com" class="link current">info@devstudio.com</a></li>
+                <li><a href="tel:+380961111111"  class="link current">+38 096 111 11 11</a></li>
             </ul>
         </address>
     </footer>
