--- a/portfolio.html
+++ b/portfolio.html
@@ -6,82 +6,87 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Работы нашей веб-студии">
     <title>Портфолио</title>
-    <link rel="stylesheet" href="./scc/styles.scc">
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
+
 <body>
     <!--header-->
     <header>
+        <!-- Nav -->
         <nav>
-            <a href="./index.html">WebStudio</a>
-            <ul>
-                <li><a href="">Студия</a></li>
-                <li><a href="">Портфолио</a></li>
-                <li><a href="">Контакты</a></li>
+            <a href="./index.html" class="logo" >WebStudio</a>
+            <ul class="site-nav list">
+                <li><a href="./index.html" class="link">Студия</a></li>
+                <li><a href="" class="link current">Портфолио</a></li>
+                <li><a href="" class="link">Контакты</a></li>
             </ul>
         </nav>
-        <ul>
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <ul class="site-nav list">
+            <li><a href="mailto:info@devstudio.com" class="link current">info@devstudio.com</a></li>
+            <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
         </ul>
     </header>
     <!--main-->
     <main>
-        <section>
-            <button type="button">Все</button>
-            <button type="button">Веб-сайты</button>
-            <button type="button">Приложения</button>
-            <button type="button">Дизайн</button>
-            <button type="button">Маркетинг</button>
-        </section>
-        <section>
-            <ul>
-                <li>
+        <section class="section">
+            <h1 class="section-title">Hаши проекты</h1>
+            <!--filter-->
+            <div>
+                <button class="button primary" type="button">Все</button>
+                <button class="button secondary" type="button">Веб-сайты</button>
+                <button class="button secondary" type="button">Приложения</button>
+                <button class="button secondary" type="button">Дизайн</button>
+                <button class="button secondary" type="button">Маркетинг</button>
+            </div>
+            <!--our projects-->
+            <ul class="list">
+                <li class="project-list">
                     <img src="./image/project1.jpg" alt="project1" width="370" height="294">
-                    <h3>Технокряк</h3>
+                    <h2 class="title">Технокряк</h2>
                     <p>Веб-сайт</p>
                 </li>
-                <li>
+                <li class="project-list">
                     <img src="./image/project2.jpg" alt="project2" width="370" height="294">
-                    <h3>Постер New Orlean vs Golden Star</h3>
+                    <h2 class="title">Постер New Orlean vs Golden Star</h2>
                     <p>Дизайн</p>
                 </li>
-                <li>
+                <li class="project-list">
                     <img src="./image/project3.jpg" alt="project3" width="370" height="294">
-                    <h3>Ресторан Seafood</h3>
+                    <h2 class="title">Ресторан Seafood</h2>
                     <p>Приложение</p>
                 </li>
             </ul>
-            <ul>
-                <li>
+            <ul class="list">
+                <li class="project-list">
                     <img src="./image/project4.jpg" alt="project4" width="370" height="294">
-                    <h3>Проект Prime</h3>
+                    <h2 class="title">Проект Prime</h2>
                     <p>Маркетинг</p>
                 </li>
-                <li>
+                <li class="project-list">
                     <img src="./image/project5.jpg" alt="project5" width="370" height="294">
-                    <h3>Проект Boxes</h3>
-                     <p>Приложение</p>
+                    <h2 class="title">Проект Boxes</h2>
+                    <p>Приложение</p>
                 </li>
-                <li>
+                <li class="project-list">
                     <img src="./image/project6.jpg" alt="project6" width="370" height="294">
-                    <h3>Inspiration has no Borders</h3>
+                    <h2 class="title">Inspiration has no Borders</h2>
                     <p>Веб-сайт</p>
                 </li>
             </ul>
-            <ul>
-                <li>
+            <ul class="list">
+                <li class="project-list">
                     <img src="./image/project7.jpg" alt="project7" width="370" height="294">
-                    <h3>Издание Limited Edition</h3>
+                    <h2 class="title">Издание Limited Edition</h2>
                     <p>Дизайн</p>
                 </li>
-                <li>
+                <li class="project-list">
                     <img src="./image/project8.jpg" alt="project8" width="370" height="294">
-                    <h3>Проект LAB</h3>
+                    <h2 class="title">Проект LAB</h2>
                     <p>Маркетинг</p>
                 </li>
-                <li>
+                <li class="project-list">
                     <img src="./image/project9.jpg" alt="project9" width="370" height="294">
-                    <h3>Growing Business</h3>
+                    <h2 class="title">Growing Business</h2>
                     <p>Приложение</p>
                 </li>
             </ul>
@@ -91,13 +96,15 @@
     <footer>
         <a href="./index.html">WebStudio</a>
         <address>
-            <ul>
-                <li><a href="https://goo.gl/maps/piqngm7oDQpEDh6u6" target="_blank" rel="noopener nofollow noreferrer">г.
+            <ul class="list">
+                <li><a href="https://goo.gl/maps/piqngm7oDQpEDh6u6" target="_blank"
+                        rel="noopener nofollow noreferrer">г.
                         Киев, пр-т Леси Украинки, 26</a></li>
                 <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                 <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
             </ul>
         </address>
-    </footer>    
+    </footer>
 </body>
+
 </html>
