--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Эффективные решения для вашего бизнеса">
     <title>WebStudio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
@@ -13,7 +17,7 @@
     <header>
         <!-- Nav -->
         <nav>
-            <a href="./index.html" class="logo">WebStudio</a>
+            <a href="./index.html" class="logo">Web<span class="accent">Studio</span></a>
             <ul class="site-nav list">
                 <li><a href="" class="link current">Студия</a></li>
                 <li><a href="./portfolio.html" class="link">Портфолио</a></li>
@@ -21,7 +25,7 @@
             </ul>
         </nav>
         <ul class="site-nav list">
-            <li><a href="mailto:info@devstudio.com" class="link current">info@devstudio.com</a></li>
+            <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
             <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
         </ul>
     </header>
@@ -34,23 +38,23 @@
         </section>
         <!-- Features -->
         <section class="section">
-            <h2 class="section-title">Особенности нашей работы</h2>
+            <h2 class="visually-hidden">Особенности нашей работы</h2>
             <ul class="list">
                 <li class="feature-list">
                     <h3 class="title">Внимание к деталям</h3>
-                    <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                    <p class="text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                 </li>
                 <li class="feature-list">
                     <h3 class="title">Пунктуальность</h3>
-                    <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                    <p class="text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                 </li>
                 <li class="feature-list">
                     <h3 class="title">Планирование</h3>
-                    <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                    <p class="text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                 </li>
                 <li class="feature-list">
                     <h3 class="title">Современные технологии</h3>
-                    <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                    <p class="text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                 </li>
             </ul>
         </section>
@@ -70,35 +74,35 @@
             </ul>
         </section>
         <!-- Our team -->
-        <section class="section">
+        <section class="section team">
             <h2 class="section-title">Наша команда</h2>
             <ul class="list">
-                <li class="team-list">
+                <li class="team-list card">
                     <img src="./image/team_card1.jpg" alt="team-card1" width="270" height="260">
                     <h3 class="title">Игорь Демьяненко</h3>
-                    <p>Product Designer</p>                    
+                    <p class="text">Product Designer</p>                    
                 </li>
-                <li class="team-list">
+                <li class="team-list card">
                     <img src="./image/team_card2.jpg" alt="team-card2" width="270" height="260">
                     <h3 class="title">Ольга Репина</h3>
-                    <p>Frontend Developer</p>
+                    <p class="text">Frontend Developer</p>
                 </li>
-                <li class="team-list">
+                <li class="team-list card">
                     <img src="./image/team_card3.jpg" alt="team-card3" width="270" height="260">
                     <h3 class="title">Николай Тарасов</h3>
-                    <p>Marketing</p>
+                    <p class="text">Marketing</p>
                 </li>
-                <li class="team-list">
+                <li class="team-list card">
                     <img src="./image/team_card4.jpg" alt="team-card4" width="270" height="260">
                     <h3 class="title">Михаил Ермаков</h3>
-                    <p>UI Designer</p>
+                    <p class="text">UI Designer</p>
                 </li>
             </ul>
         </section>
     </main>
     <!--footer-->
-    <footer>
-        <a href="./index.html" class="logo">WebStudio</a>
+    <footer class="footer">
+        <a href="./index.html" class="logo">Web<span class="accent current">Studio</span></a>
         <address>                      
             <ul class="auth-nav list">
                 <li><a href="https://goo.gl/maps/piqngm7oDQpEDh6u6" target="_blank" rel="noopener nofollow noreferrer" class="link">г. Киев, пр-т Леси Украинки, 26</a></li>
