--- a/portfolio.html
+++ b/portfolio.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Работы нашей веб-студии">
     <title>Портфолио</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 
@@ -14,7 +18,7 @@
     <header>
         <!-- Nav -->
         <nav>
-            <a href="./index.html" class="logo" >WebStudio</a>
+            <a href="./index.html" class="logo">Web<span class="accent">Studio</span></a>
             <ul class="site-nav list">
                 <li><a href="./index.html" class="link">Студия</a></li>
                 <li><a href="" class="link current">Портфолио</a></li>
@@ -22,86 +26,95 @@
             </ul>
         </nav>
         <ul class="site-nav list">
-            <li><a href="mailto:info@devstudio.com" class="link current">info@devstudio.com</a></li>
+            <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
             <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
         </ul>
     </header>
     <!--main-->
     <main>
-        <section class="section">
-            <h1 class="section-title">Hаши проекты</h1>
+        <section class="section project">
+            <h1 class="visually-hidden">Hаши проекты</h1>
             <!--filter-->
-            <div>
-                <button class="button primary" type="button">Все</button>
-                <button class="button secondary" type="button">Веб-сайты</button>
-                <button class="button secondary" type="button">Приложения</button>
-                <button class="button secondary" type="button">Дизайн</button>
-                <button class="button secondary" type="button">Маркетинг</button>
-            </div>
-            <!--our projects-->
+            <ul class="list">
+                <li>
+                    <button class="button secondary" type="button">Все</button>
+                </li>
+                <li>
+                    <button class="button secondary" type="button">Веб-сайты</button>
+                </li>
+                <li>
+                    <button class="button secondary" type="button">Приложения</button>
+                </li>
+                <li>
+                    <button class="button secondary" type="button">Дизайн</button>
+                </li>
+                <li>
+                    <button class="button secondary" type="button">Маркетинг</button>
+                </li>
+            </ul>
+             <!--our projects-->
             <ul class="list">
                 <li class="project-list">
                     <img src="./image/project1.jpg" alt="project1" width="370" height="294">
                     <h2 class="title">Технокряк</h2>
-                    <p>Веб-сайт</p>
+                    <p class="text">Веб-сайт</p>
                 </li>
                 <li class="project-list">
                     <img src="./image/project2.jpg" alt="project2" width="370" height="294">
                     <h2 class="title">Постер New Orlean vs Golden Star</h2>
-                    <p>Дизайн</p>
+                    <p class="text">Дизайн</p>
                 </li>
                 <li class="project-list">
                     <img src="./image/project3.jpg" alt="project3" width="370" height="294">
                     <h2 class="title">Ресторан Seafood</h2>
-                    <p>Приложение</p>
+                    <p class="text">Приложение</p>
                 </li>
             </ul>
             <ul class="list">
                 <li class="project-list">
                     <img src="./image/project4.jpg" alt="project4" width="370" height="294">
                     <h2 class="title">Проект Prime</h2>
-                    <p>Маркетинг</p>
+                    <p class="text">Маркетинг</p>
                 </li>
                 <li class="project-list">
                     <img src="./image/project5.jpg" alt="project5" width="370" height="294">
                     <h2 class="title">Проект Boxes</h2>
-                    <p>Приложение</p>
+                    <p class="text">Приложение</p>
                 </li>
                 <li class="project-list">
                     <img src="./image/project6.jpg" alt="project6" width="370" height="294">
                     <h2 class="title">Inspiration has no Borders</h2>
-                    <p>Веб-сайт</p>
+                    <p class="text">Веб-сайт</p>
                 </li>
             </ul>
             <ul class="list">
                 <li class="project-list">
                     <img src="./image/project7.jpg" alt="project7" width="370" height="294">
                     <h2 class="title">Издание Limited Edition</h2>
-                    <p>Дизайн</p>
+                    <p class="text">Дизайн</p>
                 </li>
                 <li class="project-list">
                     <img src="./image/project8.jpg" alt="project8" width="370" height="294">
                     <h2 class="title">Проект LAB</h2>
-                    <p>Маркетинг</p>
+                    <p class="text">Маркетинг</p>
                 </li>
                 <li class="project-list">
                     <img src="./image/project9.jpg" alt="project9" width="370" height="294">
                     <h2 class="title">Growing Business</h2>
-                    <p>Приложение</p>
+                    <p class="text">Приложение</p>
                 </li>
             </ul>
         </section>
     </main>
     <!--footer-->
-    <footer>
-        <a href="./index.html">WebStudio</a>
+    <footer class="footer">
+        <a href="./index.html" class="logo">Web<span class="accent current">Studio</span></a>
         <address>
-            <ul class="list">
-                <li><a href="https://goo.gl/maps/piqngm7oDQpEDh6u6" target="_blank"
-                        rel="noopener nofollow noreferrer">г.
-                        Киев, пр-т Леси Украинки, 26</a></li>
-                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+            <ul class="auth-nav list">
+                <li><a href="https://goo.gl/maps/piqngm7oDQpEDh6u6" target="_blank" rel="noopener nofollow noreferrer"
+                        class="link">г. Киев, пр-т Леси Украинки, 26</a></li>
+                <li><a href="mailto:info@devstudio.com" class="link current">info@devstudio.com</a></li>
+                <li><a href="tel:+380961111111" class="link current">+38 096 111 11 11</a></li>
             </ul>
         </address>
     </footer>
