--- a/portfolio.html
+++ b/portfolio.html
@@ -19,15 +19,15 @@
         <!-- Nav -->
         <nav>
             <a href="./index.html" class="logo">Web<span class="accent">Studio</span></a>
-            <ul class="site-nav list">
-                <li><a href="./index.html" class="link">Студия</a></li>
-                <li><a href="" class="link current">Портфолио</a></li>
-                <li><a href="" class="link">Контакты</a></li>
+            <ul class="site list">
+                <li><a href="./index.html" class="nav-link">Студия</a></li>
+                <li><a href="" class="nav-link current">Портфолио</a></li>
+                <li><a href="" class="nav-link">Контакты</a></li>
             </ul>
         </nav>
-        <ul class="site-nav list">
-            <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
+        <ul class="site list">
+            <li><a href="mailto:info@devstudio.com" class="contact-link current">info@devstudio.com</a></li>
+            <li><a href="tel:+380961111111" class="contact-link">+38 096 111 11 11</a></li>
         </ul>
     </header>
     <!--main-->
