--- a/index.html
+++ b/index.html
@@ -37,31 +37,31 @@
             <button class="button primary" type="button">Заказать услугу</button>
         </section>
         <!-- Features -->
-        <section class="section">
+        <section class="section feature">
             <h2 class="visually-hidden">Особенности нашей работы</h2>
-            <ul class="list">
-                <li class="feature-list">
-                    <h3 class="title">Внимание к деталям</h3>
-                    <p class="text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+            <ul class="feature list">
+                <li class="feature-item">
+                    <h3 class="feature-title">Внимание к деталям</h3>
+                    <p class="feature-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                 </li>
-                <li class="feature-list">
-                    <h3 class="title">Пунктуальность</h3>
-                    <p class="text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                <li class="feature-item">
+                    <h3 class="feature-title">Пунктуальность</h3>
+                    <p class="feature-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                 </li>
-                <li class="feature-list">
-                    <h3 class="title">Планирование</h3>
-                    <p class="text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                <li class="feature-item">
+                    <h3 class="feature-title">Планирование</h3>
+                    <p class="feature-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                 </li>
-                <li class="feature-list">
-                    <h3 class="title">Современные технологии</h3>
-                    <p class="text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                <li class="feature-item">
+                    <h3 class="feature-title">Современные технологии</h3>
+                    <p class="feature-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                 </li>
             </ul>
         </section>
         <!-- Our work -->
-        <section class="section">
+        <section class="section work">
             <h2 class="section-title">Чем мы занимаемся</h2>
-            <ul class="list">
+            <ul class="work list">
                 <li>
                     <img src="./image/box1.jpg" alt="box1" width="370" height="294"/>
                 </li>
@@ -76,26 +76,26 @@
         <!-- Our team -->
         <section class="section team">
             <h2 class="section-title">Наша команда</h2>
-            <ul class="list">
-                <li class="team-list card">
+            <ul class="team list">
+                <li class="team-item card">
                     <img src="./image/team_card1.jpg" alt="team-card1" width="270" height="260">
-                    <h3 class="title">Игорь Демьяненко</h3>
-                    <p class="text">Product Designer</p>                    
+                    <h3 class="team-title">Игорь Демьяненко</h3>
+                    <p class="team-text">Product Designer</p>                    
                 </li>
-                <li class="team-list card">
+                <li class="team-item card">
                     <img src="./image/team_card2.jpg" alt="team-card2" width="270" height="260">
-                    <h3 class="title">Ольга Репина</h3>
-                    <p class="text">Frontend Developer</p>
+                    <h3 class="team-title">Ольга Репина</h3>
+                    <p class="team-text">Frontend Developer</p>
                 </li>
-                <li class="team-list card">
+                <li class="team-item card">
                     <img src="./image/team_card3.jpg" alt="team-card3" width="270" height="260">
-                    <h3 class="title">Николай Тарасов</h3>
-                    <p class="text">Marketing</p>
+                    <h3 class="team-title">Николай Тарасов</h3>
+                    <p class="team-text">Marketing</p>
                 </li>
-                <li class="team-list card">
+                <li class="team-item card">
                     <img src="./image/team_card4.jpg" alt="team-card4" width="270" height="260">
-                    <h3 class="title">Михаил Ермаков</h3>
-                    <p class="text">UI Designer</p>
+                    <h3 class="team-title">Михаил Ермаков</h3>
+                    <p class="team-text">UI Designer</p>
                 </li>
             </ul>
         </section>
