Корегує footer по класах

--- a/index.html
+++ b/index.html
@@ -79,23 +79,23 @@
             <ul class="team list">
                 <li class="team-item card">
                     <img src="./image/team_card1.jpg" alt="team-card1" width="270" height="260">
-                    <h3 class="team-title">Игорь Демьяненко</h3>
-                    <p class="team-text">Product Designer</p>                    
+                    <h3 class="team-name">Игорь Демьяненко</h3>
+                    <p class="team-position">Product Designer</p>                    
                 </li>
                 <li class="team-item card">
                     <img src="./image/team_card2.jpg" alt="team-card2" width="270" height="260">
-                    <h3 class="team-title">Ольга Репина</h3>
-                    <p class="team-text">Frontend Developer</p>
+                    <h3 class="team-name">Ольга Репина</h3>
+                    <p class="team-position">Frontend Developer</p>
                 </li>
                 <li class="team-item card">
                     <img src="./image/team_card3.jpg" alt="team-card3" width="270" height="260">
-                    <h3 class="team-title">Николай Тарасов</h3>
-                    <p class="team-text">Marketing</p>
+                    <h3 class="team-name">Николай Тарасов</h3>
+                    <p class="team-position">Marketing</p>
                 </li>
                 <li class="team-item card">
                     <img src="./image/team_card4.jpg" alt="team-card4" width="270" height="260">
-                    <h3 class="team-title">Михаил Ермаков</h3>
-                    <p class="team-text">UI Designer</p>
+                    <h3 class="team-name">Михаил Ермаков</h3>
+                    <p class="team-position">UI Designer</p>
                 </li>
             </ul>
         </section>
@@ -104,10 +104,10 @@
     <footer class="footer">
         <a href="./index.html" class="logo">Web<span class="accent current">Studio</span></a>
         <address>                      
-            <ul class="auth-nav list">
-                <li><a href="https://goo.gl/maps/piqngm7oDQpEDh6u6" target="_blank" rel="noopener nofollow noreferrer" class="link">г. Киев, пр-т Леси Украинки, 26</a></li>
-                <li><a href="mailto:info@devstudio.com" class="link current">info@devstudio.com</a></li>
-                <li><a href="tel:+380961111111"  class="link current">+38 096 111 11 11</a></li>
+            <ul class="address list">
+                <li><a href="https://goo.gl/maps/piqngm7oDQpEDh6u6" target="_blank" rel="noopener nofollow noreferrer" class="address-item">г. Киев, пр-т Леси Украинки, 26</a></li>
+                <li><a href="mailto:info@devstudio.com" class="address-item current">info@devstudio.com</a></li>
+                <li><a href="tel:+380961111111"  class="address-item current">+38 096 111 11 11</a></li>
             </ul>
         </address>
     </footer>
