Додає правки portfolio

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <!--Hero-->
         <section class="hero">
             <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-            <button class="button primary" type="button">Заказать услугу</button>
+            <button class="hero button" type="button">Заказать услугу</button>
         </section>
         <!-- Features -->
         <section class="section feature">
@@ -80,22 +80,22 @@
                 <li class="team-item card">
                     <img src="./image/team_card1.jpg" alt="team-card1" width="270" height="260">
                     <h3 class="team-name">Игорь Демьяненко</h3>
-                    <p class="team-position">Product Designer</p>                    
+                    <p class="team-description">Product Designer</p>                    
                 </li>
                 <li class="team-item card">
                     <img src="./image/team_card2.jpg" alt="team-card2" width="270" height="260">
                     <h3 class="team-name">Ольга Репина</h3>
-                    <p class="team-position">Frontend Developer</p>
+                    <p class="team-description">Frontend Developer</p>
                 </li>
                 <li class="team-item card">
                     <img src="./image/team_card3.jpg" alt="team-card3" width="270" height="260">
                     <h3 class="team-name">Николай Тарасов</h3>
-                    <p class="team-position">Marketing</p>
+                    <p class="team-description">Marketing</p>
                 </li>
                 <li class="team-item card">
                     <img src="./image/team_card4.jpg" alt="team-card4" width="270" height="260">
                     <h3 class="team-name">Михаил Ермаков</h3>
-                    <p class="team-position">UI Designer</p>
+                    <p class="team-description">UI Designer</p>
                 </li>
             </ul>
         </section>
