--- a/portfolio.html
+++ b/portfolio.html
@@ -35,9 +35,9 @@
         <section class="section project">
             <h1 class="visually-hidden">Hаши проекты</h1>
             <!--filter-->
-            <ul class="list">
-                <li>
-                    <button class="button secondary" type="button">Все</button>
+            <ul class="project list">
+                <li class="button-item">
+                    <button class="button primary" type="button">Все</button>
                 </li>
                 <li>
                     <button class="button secondary" type="button">Веб-сайты</button>
@@ -53,55 +53,51 @@
                 </li>
             </ul>
              <!--our projects-->
-            <ul class="list">
-                <li class="project-list">
+            <ul class="project list">
+                <li class="project-item">
                     <img src="./image/project1.jpg" alt="project1" width="370" height="294">
-                    <h2 class="title">Технокряк</h2>
-                    <p class="text">Веб-сайт</p>
+                    <h2 class="project-name">Технокряк</h2>
+                    <p class="project-position">Веб-сайт</p>
                 </li>
-                <li class="project-list">
+                <li class="project-item">
                     <img src="./image/project2.jpg" alt="project2" width="370" height="294">
-                    <h2 class="title">Постер New Orlean vs Golden Star</h2>
-                    <p class="text">Дизайн</p>
+                    <h2 class="project-name">Постер New Orlean vs Golden Star</h2>
+                    <p class="project-position">Дизайн</p>
                 </li>
-                <li class="project-list">
+                <li class="project-item">
                     <img src="./image/project3.jpg" alt="project3" width="370" height="294">
-                    <h2 class="title">Ресторан Seafood</h2>
-                    <p class="text">Приложение</p>
+                    <h2 class="project-name">Ресторан Seafood</h2>
+                    <p class="project-position">Приложение</p>
                 </li>
-            </ul>
-            <ul class="list">
-                <li class="project-list">
+                <li class="project-item">
                     <img src="./image/project4.jpg" alt="project4" width="370" height="294">
-                    <h2 class="title">Проект Prime</h2>
-                    <p class="text">Маркетинг</p>
+                    <h2 class="project-name">Проект Prime</h2>
+                    <p class="project-position">Маркетинг</p>
                 </li>
-                <li class="project-list">
+                <li class="project-item">
                     <img src="./image/project5.jpg" alt="project5" width="370" height="294">
-                    <h2 class="title">Проект Boxes</h2>
-                    <p class="text">Приложение</p>
+                    <h2 class="project-name">Проект Boxes</h2>
+                    <p class="project-position">Приложение</p>
                 </li>
-                <li class="project-list">
+                <li class="project-item">
                     <img src="./image/project6.jpg" alt="project6" width="370" height="294">
-                    <h2 class="title">Inspiration has no Borders</h2>
-                    <p class="text">Веб-сайт</p>
+                    <h2 class="project-name">Inspiration has no Borders</h2>
+                    <p class="project-position">Веб-сайт</p>
                 </li>
-            </ul>
-            <ul class="list">
-                <li class="project-list">
+                <li class="project-item">
                     <img src="./image/project7.jpg" alt="project7" width="370" height="294">
-                    <h2 class="title">Издание Limited Edition</h2>
-                    <p class="text">Дизайн</p>
+                    <h2 class="project-name">Издание Limited Edition</h2>
+                    <p class="project-position">Дизайн</p>
                 </li>
-                <li class="project-list">
+                <li class="project-item">
                     <img src="./image/project8.jpg" alt="project8" width="370" height="294">
-                    <h2 class="title">Проект LAB</h2>
-                    <p class="text">Маркетинг</p>
+                    <h2 class="project-name">Проект LAB</h2>
+                    <p class="project-position">Маркетинг</p>
                 </li>
-                <li class="project-list">
+                <li class="project-item">
                     <img src="./image/project9.jpg" alt="project9" width="370" height="294">
-                    <h2 class="title">Growing Business</h2>
-                    <p class="text">Приложение</p>
+                    <h2 class="project-name">Growing Business</h2>
+                    <p class="project-position">Приложение</p>
                 </li>
             </ul>
         </section>
@@ -110,11 +106,11 @@
     <footer class="footer">
         <a href="./index.html" class="logo">Web<span class="accent current">Studio</span></a>
         <address>
-            <ul class="auth-nav list">
+            <ul class="address list">
                 <li><a href="https://goo.gl/maps/piqngm7oDQpEDh6u6" target="_blank" rel="noopener nofollow noreferrer"
-                        class="link">г. Киев, пр-т Леси Украинки, 26</a></li>
-                <li><a href="mailto:info@devstudio.com" class="link current">info@devstudio.com</a></li>
-                <li><a href="tel:+380961111111" class="link current">+38 096 111 11 11</a></li>
+                        class="address-item">г. Киев, пр-т Леси Украинки, 26</a></li>
+                <li><a href="mailto:info@devstudio.com" class="address-item current">info@devstudio.com</a></li>
+                <li><a href="tel:+380961111111" class="address-item current">+38 096 111 11 11</a></li>
             </ul>
         </address>
     </footer>
